# fast-api

./: main.py  pyproject.toml  requirements.txt
app/config/: constant.py  prisma.py
app/exception/: validation_error.py
app/helpers/: generate_tokens.py
app/middlewares/: auth_middleware.py  success_response.py
app/models/: abstraction.py
app/routes/: router.py
app/services/: item_service.py
app/services/users/: routes.py
app/services/users/controllers/: user_controller.py
app/services/users/core/: security.py
app/services/users/repository/: base_repository.py  tokens_repository.py  user_repository.py
app/services/users/schema/: user_schema.py
app/services/users/service/: user_service.py
prisma/: schema.prisma
